--- a/src/components/WYSIWYGInput/index.css
+++ b/src/components/WYSIWYGInput/index.css
@@ -95,6 +95,15 @@
     .public-DraftEditor-content {
       /* The initial minimum height for the editor content */
       min-height: 100px;
+
+      div {
+        /* If not the first nor last editor element */
+        >*:not(:first-child):not(:last-child) {
+          /* Adds a margin between editor elements */
+          /* The prose class is not capable of applying margins to paragraph sections for intance */
+          @apply my-5;
+        }
+      }
     }
 
     .public-DraftEditorPlaceholder-root {
@@ -192,18 +201,18 @@
   }
 
   .pui-wysiwyg-left {
-    @apply pui-wysiwyg-base text-left;
+    @apply pui-wysiwyg-base text-left my-4;
   }
 
   .pui-wysiwyg-center {
-    @apply pui-wysiwyg-base text-center;
+    @apply pui-wysiwyg-base text-center my-4;
   }
 
   .pui-wysiwyg-right {
-    @apply pui-wysiwyg-base text-right;
+    @apply pui-wysiwyg-base text-right my-4;
   }
 
   .pui-wysiwyg-justify {
-    @apply pui-wysiwyg-base text-justify;
+    @apply pui-wysiwyg-base text-justify my-4;
   }
 }
