--- a/src/components/Badge/index.css
+++ b/src/components/Badge/index.css
@@ -4,11 +4,30 @@
   }
 
   .pui-badge-content {
-    @apply absolute z-10 pointer-events-none select-none flex flex-row flex-wrap items-center justify-center text-center top-0 right-0 text-pui-paragraph-0 bg-pui-placeholder-color;
+    @apply absolute z-10 pointer-events-none select-none flex flex-row flex-wrap items-center justify-center text-center text-pui-paragraph-0 bg-pui-placeholder-color;
 
-    transform: translate(50%, -50%);
     transform-origin: 100% 0%;
 
+    &.pui-badge-placement-top-right {
+      @apply top-0 right-0;
+      transform: translate(50%, -50%);
+    }
+
+    &.pui-badge-placement-bottom-right {
+      @apply bottom-0 right-0;
+      transform: translate(50%, 50%);
+    }
+
+    &.pui-badge-placement-bottom-left {
+      @apply bottom-0 left-0;
+      transform: translate(-50%, 50%);
+    }
+
+    &.pui-badge-placement-top-left {
+      @apply top-0 left-0;
+      transform: translate(-50%, -50%);
+    }
+  
     &.pulse {
       &::before {
         @apply animate-ping opacity-75 bg-pui-placeholder-color absolute inset-0 rounded-full;
