--- a/src/components/index.css
+++ b/src/components/index.css
@@ -19,3 +19,7 @@
 @import './WYSIWYGInput';
 @import './DragFileUploadInput';
 @import './Container';
+@import './CardBanner';
+@import './ListConnector';
+@import './PercentageCircle';
+@import './ExpertImage';
