--- a/src/components/index.css
+++ b/src/components/index.css
@@ -23,3 +23,10 @@
 @import './ListConnector';
 @import './PercentageCircle';
 @import './ExpertImage';
+@import './ModuleCard';
+@import './BoxShadow';
+@import './EventCard';
+@import './WorkSessionCard';
+@import './ResourcesCard';
+@import './ExpertCard';
+@import './ProgramCard';
