--- a/src/components/TextInput/index.css
+++ b/src/components/TextInput/index.css
@@ -23,7 +23,7 @@
       /* If it overflows, adds an allipsis */
       /* If it overflows, don't wrap */
       /* If it overflows, don't add a scrollbar */
-      @apply text-pui-paragraph-300 overflow-ellipsis whitespace-nowrap overflow-hidden;
+      @apply text-pui-paragraph-300 text-ellipsis whitespace-nowrap overflow-hidden;
       overflow-wrap: normal;
     }
 
