refactor: modal component props

--- a/src/components/Modal/index.css
+++ b/src/components/Modal/index.css
@@ -1,4 +1,5 @@
 @layer components {
+
   /* The modal wrapper */
   .pui-modal {
     /* It starts hidden */
@@ -43,7 +44,9 @@
     /* Animate the fadeUp effect */
     @apply relative shadow-xl my-0 mx-auto md:mt-14 bg-white max-w-full min-w-screen-90 md:min-w-initial pui-border-radius pui-animate-fadeUp;
     /* Define a border radius that matches with new design */
-    border-radius: 20px 45px 20px 20px;
+    &.New {
+      border-radius: 20px 45px 20px 20px;
+    }
   }
 
   .pui-modal-header {
