--- a/src/components/BaseCard/index.css
+++ b/src/components/BaseCard/index.css
@@ -1,11 +1,11 @@
 @layer components {
   .pui-baseCard {
     /* Adds the expected placeholder color for the bg */
-    @apply flex w-full pui-rounded-Card overflow-hidden pui-boxshadow-lg;
+    @apply flex w-full overflow-hidden shadow-md rounded-lg border border-gray-100;
   }
 
   .pui-rounded-gradient-bar {
-    border-radius: var(--pui-rounded-gradient-bar, 0.75rem 0 0 0.75rem);
+    border-radius: var(--pui-rounded-gradient-bar, 0.5rem 0 0 0.5rem);
   }
 
   .gradient-bar {
