--- a/src/components/ModuleCard/index.css
+++ b/src/components/ModuleCard/index.css
@@ -1,6 +1,6 @@
 @layer components {
   .pui-moduleCard {
     /* Adds the expected placeholder color for the bg */
-    @apply flex flex-col w-full max-w-md pui-rounded-Card overflow-hidden pui-boxshadow-lg;
+    @apply flex flex-col w-full max-w-md overflow-hidden pui-boxshadow-lg;
   }
 }
