--- a/src/components/HTMLParsedContent/index.css
+++ b/src/components/HTMLParsedContent/index.css
@@ -4,6 +4,11 @@
     /* Apply the prose class */
     @apply prose;
 
+    .pui-btn-default {
+      @apply !text-white;
+      text-decoration: none !important;
+    }
+
     /* Before customizing the prose css from here, try to customize it
     in the default-preset.js "typography" extend value first.
     By reading the tailwind typography plugin documentation */
